integration_tests/codegen_fail/fail/interface/name_double_underscored.rs
use juniper::graphql_interface;

#[graphql_interface]
trait __Character {
    fn id(&self) -> &str {
        "funA"
    }
}

fn main() {}
